# FHL_bible_tool_bot

./: .gitignore  README.md  SETUP-RTX6000PRO.md  SETUP.md  pyproject.toml
scripts/: app.py  ask_bible.py  bible_rag.py  claude_bible_rag.py  fhl_tools.py
